# scribe-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generated_content.md  pyproject.toml  temp.py
deployment/: Dockerfile  docker-compose.yml  streamlit_config.toml
docs/: CONTRIBUTING.md  DEPLOYMENT.md  README.md
examples/: langchain_content_example.py
research_cache/: research_6aa40724d7b33cb20b07f30f4034484a.json
scribe_ai/agents/: __init__.py  agent_manager.py  class.py  content.py  content_formatter.py  content_generator.py  content_orchestrator.py  content_planner.py  content_temp.py  imports.py  research_manager.py
scribe_ai/core/: research.py
scribe_ai/utils/: api_storage.py  config.py  config_manager.py  rate_limiter.py  text_processing.py
tests/test_core/: research_test.py
