[project]
name = "scribe-ai"
version = "0.1.0"
description = "An Advanced AI-Powered Writing Assistant Built with Gemini AI"
authors = [
    {name = "Sabin Pokharel", email = "savinpokharel@gmail.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "streamlit>=1.29.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.0",
    "nest_asyncio>=1.5.6",
    "beautifulsoup4>=4.11.0",
    "markdown2>=2.4.0",
    "cryptography>=40.0.0",
    "pyperclip>=1.8.2",
    "textstat>=0.7.3",
    "newspaper3k>=0.2.8",
    "lxml>=4.9.0",
    "scholarly>=1.7.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "python-slugify>=8.0.0",
    "validators>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "types-all>=1.0.0",
    "bump2version>=1.0.1",
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.0",
]

test = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.2.0",
    "fakeredis>=2.10.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0",
]

docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-ra -q --cov=scribe_ai --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]