[project]
name = "scribe-ai"
version = "0.1.0"
description = "An Advanced AI-Powered Writing Assistant Built with Gemini AI"
authors = [
    {name = "Sabin Pokharel", email = "savinpokharel@gmail.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "streamlit>=1.38.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.5",
    "nest_asyncio>=1.5.7",
    "beautifulsoup4>=4.12.2",
    "markdown2>=2.4.9",
    "cryptography>=41.0.3",
    "pyperclip>=1.8.3",
    "textstat>=0.7.4",
    "newspaper3k>=0.2.8",
    "lxml>=4.9.3",
    "scholarly>=1.7.11",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.1",
    "python-slugify>=8.0.1",
    "validators>=0.21.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.22.0",
    "black>=23.9.1",
    "ruff>=0.0.297",
    "mypy>=1.6.0",
    "pre-commit>=3.4.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    # Removed types-all and using specific type packages instead
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.1",
    "bump2version>=1.0.1",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.0",
]

test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.22.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.2.0",
    "fakeredis>=2.10.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-ra -q --cov=scribe_ai --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]